edits from heckman and anna

--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -49,10 +49,8 @@ University of Southern California}
 \singlespacing
 \thispagestyle{empty}
 \begin{abstract}
-\noindent This paper estimates the life-cycle benefits from a widely implemented, prototypical early childhood program targeting disadvantaged families. The program fostered children's skills from ages 0 to 5, as well as intergenerational labor-market attainment. It was evaluated by random assignment and followed participants through their mid-30s. We pool the experimental data with non-experimental datasets using economic models to predict the life-cycle benefits through the income of the parents of the treated children, as well the education, labor income, criminal activity, and health of the treatment participants. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct a extensive sensitivity analyses to account for classical estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). We examine the performance of widely used \textit{ad hoc} estimates of long-term benefits based on childhood test scores, and find them wanting.
+\noindent This paper estimates the life-cycle benefits from a widely implemented, prototypical early childhood program targeting disadvantaged families. The program fostered children's skills from ages 0 to 5, as well as intergenerational labor-market attainment. It was evaluated by random assignment and followed participants through their mid-30s. We pool the experimental data with non-experimental datasets using economic models to predict the life-cycle benefits through the income of the parents of the treated children, as well the education, labor income, criminal activity, and health of the treated participants. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for classical estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores, and find them wanting.
 \end{abstract}
-
-\noindent  \textbf{[Typist: George, is this how you always want this to appear? [referring to benefit/cost] Pick a lane and we'll make it consistent across the paper] [JLG: Yes, please. Let's homogenize everything to that.]}\\
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, life-cycle benefits, long-term predictions, rates of return. \\
 \noindent \textbf{JEL codes}: J13, I28, C93\\
@@ -65,7 +63,7 @@ Department of Economics                                & Department of Economics
 University of Chicago                                       & University of Chicago \\
 1126 East 59th Street                                     & 1126 East 59th Street \\
 Chicago, IL 60637                                           & Chicago, IL 60637 \\
-Phone: 773-677-7938                                     & Phone: 773-702-0634  \\
+Phone: 773-449-0744                                  & Phone: 773-702-0634  \\
 Email: jorgelgarcia@uchicago.edu                       & Email: jjh@uchicago.edu \\
                                                                        & \\
 Duncan Ermini Leaf                                           & Mar\'{i}a Jos\'{e} Prados \\
@@ -88,15 +86,15 @@ Email: dleaf@healthpolicy.usc.edu                     & Email: prados@usc.edu \\
 
 \section{Introduction}
 
-This paper estimates the life-cycle benefits of a prototypical influential early childhood program targeted to disadvantaged children that is currently being replicated around the world.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP---eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} The program has substantial impacts on the lives of both child participants and their mothers. Monetizing benefits and costs across multiple domains, we estimate a baseline internal rate of return of 13.7\% per annum and a baseline benefit/cost ratio of 7.3. We conduct extensive sensitivity analyses and produce ranges of values at (8.0, 18.3) for the internal rate of return and (1.52, 17.40) for the benefit-cost estimates. Consistent with the previous literature, there are substantial differences across genders favoring males.\footnote{\cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
+This paper estimates the life-cycle benefits of a prototypical influential early childhood program targeted to disadvantaged children that is currently being replicated around the world.\footnote{Programs inspired by ABC/CARE have been (and are currently being) launched around the world. \citet{Sparling_2010_Highlights} and \citet{Ramey_Ramey_Lanzi_2014_Interventions} list numerous programs based on the ABC/CARE approach. The programs are: IHDP in eight different cities around the U.S. \citep{Spiker-etal_1997_Helping}; Early Head Start and Head Start in the U.S. \citep{Schneider_McDonald-eds_2007_Scale-Up_Vol-1}; John's Hopkins Cerebral Palsy Study in the U.S. \citep{Sparling_2010_Highlights}; Classroom Literacy Interventions and Outcomes (CLIO) study in the U.S. \citep{Sparling_2010_Highlights}; Massachusetts Family Child Care Study \citep{Collins_etal_2010_Massachusetts-Study}; Healthy Child Manitoba Evaluation \citep{Healthy_Child_Manitoba_2015_Starting-Early}; Abecedarian Approach within an Innovative Implementation Framework \citep{Jensen_Nielsen_2016_ABC-Programme-Pilot}; and Building a Bridge into Preschool in Remote Northern Territory Communities in Australia \citep{UMonash_Dataset_2015_URL}. Educare programs are also based on ABC/CARE \citep{Educare_2014_Research_Agenda,Yazejian_Bryant_2012_Educare}.} The program has substantial impacts on the lives of both child participants and their mothers. Monetizing benefits and costs across multiple domains, we estimate a baseline internal rate of return of 13.7\% per annum and a baseline benefit/cost ratio of 7.3. We conduct extensive sensitivity analyses and produce ranges of values for the estimates of the internal rate of return (8.0, 18.3) and the benefit/cost ratio (1.52, 17.40). Consistent with the previous literature, there are substantial differences across genders favoring males.\footnote{\cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
 
-Our analysis contributes to a growing literature on the value of early-life programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term returns and not short-term arrays of treatment effects are relevant for policy analysis. However, long-term evidence on their effectiveness is surprisingly limited given the short-term follow up for most studies.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_QE,Heckman_Moon_etal_2010_RateofReturn}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report treatment effects for a few outcomes for early ages after program completion, e.g. IQ scores, school readiness measures.\footnote{See, e.g., \cite{Kline_Walters_2016_QJE} and \cite{Weiland_2013_CD_Impacts-of-Pre-K}.} They project lifetime estimates using labor income---ability measures fit on auxiliary data sets (see, e.g., the work of Kline and Walters). Using our data, we report how misleading this practice can be. We analyze labor income as well as a number of non-market benefits. Because of the controversial nature of monetizing non-market benefits, we conduct and report extensive sensitivity analyses on the components of our estimates so that others can weigh the evidence using their own judgments about the strength of the evidence.
+Our analysis contributes to a growing literature on the value of early-life programs for disadvantaged children.\footnote{See, e.g., \cite{Currie_2011_AER} and \cite{Elango_Hojman_etal_2016_Early-Edu}.} Long-term returns and not short-term arrays of treatment effects are relevant for policy analysis. However, long-term evidence on the effectiveness of these programs is limited given the short-term follow-up for most studies.\footnote{The major source of evidence is from the Perry Preschool Program (see \citealp{Schweinhart_Montie_ea_2005_BOOKlifetime} and \citealp{Heckman_Moon_etal_2010_QE,Heckman_Moon_etal_2010_RateofReturn}), the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE) (\citealp{Ramey_Campbell_etal_2000_ADS,Ramey-etal_2012-ABC}), and the Infant Health and Development Program (IHDP) (\citealp{Gross_Spiker_etal_1997_BOOKHelpinglowbirth,Duncan_Sojourner_2013_JHR}). IHDP was inspired by ABC/CARE \citep[][]{Gross_Spiker_etal_1997_BOOKHelpinglowbirth}.} For want of follow-up data, many studies of early childhood programs report treatment effects for a few outcomes collected at early ages after program completion, e.g. IQ scores or school readiness measures.\footnote{See, e.g.,  \cite{Weiland_2013_CD_Impacts-of-Pre-K} and \cite{Kline_Walters_2016_QJE}.} Other studies, such as \citet{Kline_Walters_2016_QJE}, use these early measures fit on auxiliary data to project lifetime estimates of labor income. Using our data, we report how misleading this practice can be. We analyze labor income as well as a number of non-market benefits. Because of the controversial nature of monetizing non-market benefits, we conduct and report extensive sensitivity analyses on the components of our estimates so that others can evaluate the contribution of these elements using their own judgments about the strength of the evidence.
 
-We analyze the costs and benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina: the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE. Both programs were launched in the 1970s and have long-term follow-ups through the mid 30's. The programs start early (at 8 weeks of life) and engaged participants to age 5. \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED} analyze their impacts on a variety of life-cycle outcomes such as health, the quality of life,\footnote{Throughout this paper, \textit{we refer to health-related quality of life as quality of life}. It is the weight attached to each year of life as a function of disease burden, as we discuss further below.} participation in crime, labor income, IQ, schooling, and increased maternal education and labor income arising from subsidized childcare through the participants' mid-30s. In this paper, we predict these benefits beyond the mid-30s to estimate rates of return and cost-benefit analyses.\footnote{The parental labor income we observe is aggregated across the parents. Only 27\% of the mothers lived with a partner at baseline, so we refer to the gain in parental labor income as a gain in mother's labor income.}
+We analyze the costs and benefits from two virtually identical early childhood programs evaluated by randomized trials conducted in North Carolina: the Carolina Abecedarian Project (ABC) and the Carolina Approach to Responsive Education (CARE)---henceforth ABC/CARE. Both programs were launched in the 1970s and have long-term follow-ups through the mid 30s. The programs start early (at 8 weeks of life) and engaged participants until age 5. \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} analyze their impacts on a variety of life-cycle outcomes such as health, the quality of life,\footnote{Throughout this paper, \textit{we refer to health-related quality of life as quality of life}. It is the weight attached to each year of life as a function of disease burden, as we discuss further below.} participation in crime, labor income, IQ, schooling, and increased maternal education and labor income arising from subsidized childcare through the participants' mid 30s. In this paper, we predict these benefits beyond the mid 30s to estimate rates of return and benefit/cost ratios.\footnote{The parental labor income we observe is aggregated across the parents. Only 27\% of the mothers lived with a partner at baseline, so we refer to the gain in parental labor income as a gain in mother's labor income.}
 
-Evidence from these programs is highly relevant for contemporary policy discussions because their main components are present in a variety of current interventions. About 19\% of all African-American children would be eligible for ABC/CARE today.\footnote{43\% of African-American children were eligible in 1972. (Author's calculation using the Panel Study of Income Dynamics (PSID).)}
+Evidence from these programs is highly relevant for contemporary policy discussions because their main components are present in a variety of current interventions. Furthermore, about 19\% of all African-American children would be eligible for ABC/CARE today.\footnote{According to the authors' calculations using the Panel Study of Income Dynamics (PSID), 43\% of African-American children were eligible in 1972.} \textbf{[AZ: move this elsewhere?]}
 
-Analyzing the life-cycle benefits of programs with a diverse array of outcomes across multiple domains and periods of life is both challenging and rewarding. Doing so highlights the numerous ways through which early childhood programs enhance adult capabilities and enhance the lives of mothers. We use a variety of measures to characterize program benefits. Instead of reporting individual treatment effects or categories of treatment effects, our benefit/cost analyses account for all measured aspects of these programs, including the welfare costs of taxes to publicly finance them. In the text and in the  Appendix, we report the sensitivity of our estimates to the inclusion of numerous components of costs and benefits.\footnote{\cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} present a cost/benefit analysis for ABC through age 21, before many benefits are realized. They report a benefit/cost ratio of 2.5, but give no standard errors or sensitivity analyses for their estimate. They do not disaggregate by gender. For want of the data collected on health at the mid 30's, they do not account for health benefits. They use self-reported crime data (unlike the administrative crime data later collected that we analyze) and ignore the welfare costs of financing the program. We use cost data from primary sources not available to them.}
+Analyzing the life-cycle benefits of programs with a diverse array of outcomes across multiple domains and periods of life is both challenging and rewarding. Doing so highlights the numerous ways through which early childhood programs enhance the lives of the mothers and the adult capabilities of the subjects. We use a variety of measures to characterize program benefits. Instead of reporting individual treatment effects or categories of treatment effects, our benefit/cost analyses account for all measured aspects of these programs, including the welfare costs of taxes to publicly finance them. In the text and in the  Appendix, we report the sensitivity of our estimates to the inclusion of numerous components of costs and benefits.\footnote{\cite{Barnett_Masse_2002_benefitcost,Barnett_Masse_2007_EER} present a cost/benefit analysis for ABC through age 21, before many benefits are realized. They report a benefit/cost ratio of 2.5, but give no standard errors or sensitivity analyses for their estimate. They do not disaggregate by gender. For want of the data collected on health at the mid 30's, they do not account for health benefits. They use self-reported crime data (unlike the administrative crime data later collected that we analyze) and ignore the welfare costs of financing the program. We use cost data from primary sources not available to them.}
 
 A fundamental problem in evaluating any intervention is assessing out-of-sample future costs and benefits. All solutions to this problem are based on some version of a synthetic cohort approach using the outcomes of older cohorts who did not have access to the program, and are otherwise comparable to treated and control persons, to proxy treatment effects of individuals when they are older.\footnote{\cite{Mincer_1974_schooling} addresses this problem using a synthetic cohort approach and provides evidence on its validity. See also the discussion of the synthetic cohort approach in \cite{Heckman_Lochner_ea_2006_HEE}.} Apart from the problem of cohort effects, which is potentially serious, there is the additional problem that the measured outcomes of the experiment (e.g., test scores, education) used to predict future outcomes bear a different relationship to each other in the experimental data than in non-experimental data on older cohorts. The variation in the experiment generated by random assignment is generally not the same as the variation generated in non-experimental data. We address this issue in forming our estimated future returns. We combine experimental data through the mid 30's with information from multiple auxiliary panel data sources to predict benefits and costs over the lifetimes of participants.\footnote{\citet{Ridder_Moffitt_2007_hbk_metricsdata} provide a valuable discussion of data combination methods. These methods are related to the older ``surrogate marker'' literature in biostatistics (see e.g., \citealp{Prentice_1989_Surrogate_SiM}). However, this literature ignores the issue of misalignment of experimental and non-experimental predictors and outcomes, which we address in this paper.}
 
@@ -104,7 +102,7 @@ Our analysis is simplified by the fact that most of the eligible families offere
 
 We account for sampling uncertainty arising from combining data, estimating parameters of behavioral equations, sample pretesting, and simulating models. We conduct sensitivity analyses for outcomes for which sampling uncertainty is not readily quantified. Our approach to combining multiple data sets is of interest in its own right as a template for predicting the life-cycle benefits of social programs.
 
-Our analysis builds on the research of \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}, who account for control group substitution.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.} Roughly 75\% of the control-group children in ABC/CARE enroll in some form of lower quality alternative childcare outside of the home.\footnote{We refer to alternatives as alternative childcare or alternative preschool centers. See  Appendix~\ref{appendix:background} for a precise description of these alternatives.} They define and estimate parameters accounting for the choices taken by the control groups in our study. They find pronounced gender differences in treatment effects comparing high quality treatment with lower quality alternatives. Males benefit much less from lower quality alternative market childcare arrangements compared to females, a result consistent with the literature on the vulnerability of male children when removed from their mothers, even for short periods.\footnote{See \citet{Kottelenberg-Lehrer_2014_Gender-Effects}, \citet{Baker_Gruber_Milligan_2015_Noncog_Defects}, \cite{Schore_2017_IMHJ}, and \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
+Our analysis builds on the research of \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, who account for control group substitution.\footnote{See \cite{Heckman_1992_randomization}, \cite{Heckman_Hohmann_etal_2000_QJE}, and \cite{Kline_Walters_2016_QJE}.} Roughly 75\% of the control-group children in ABC/CARE enroll in some form of lower quality alternative childcare outside of the home.\footnote{We refer to alternatives as alternative childcare or alternative preschool centers. See  Appendix~\ref{appendix:background} for a precise description of these alternatives.} They define and estimate parameters accounting for the choices taken by the control groups in our study. They find pronounced gender differences in treatment effects comparing high quality treatment with lower quality alternatives. Males benefit much less from lower quality alternative market childcare arrangements compared to females, a result consistent with the literature on the vulnerability of male children when removed from their mothers, even for short periods.\footnote{See \citet{Kottelenberg-Lehrer_2014_Gender-Effects}, \citet{Baker_Gruber_Milligan_2015_Noncog_Defects}, \cite{Schore_2017_IMHJ}, and \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}.}
 
 We contribute to the literature on the effectiveness of early childhood programs by considering their long-term benefits on health. We estimate the savings from life-cycle medical costs and from improvements in the quality of life.\footnote{\cite{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} show the substantial adult (mid-30s) health benefits of ABC but do not present a cost/benefit analysis of their results.} There are benefits for participants in terms of reduced crime, gains in life-cycle labor income, reduced special education costs and enhanced educational attainment. The program subsidizes the childcare of the mothers of participants and facilitates their employment, labor income, and educational attainment.
 
@@ -150,14 +148,14 @@ B/C Ratio & \textbf{6.29} & \textbf{11.10} & \textbf{2.45} & 	\textbf{4.86} & 8.
 
 Summarizing our findings, the estimates of the overall benefit/cost ratio (internal rate of return) ranges from 1.52 to 17.40 (8 to 18.3) for the full sample. They range from 2.23 to 25.45 (6 to 19.4) for the males, and from 1.12 to 5.79 (4 to 18) for the females. Benefits from reduced crime and increased labor income are especially pronounced for males, contributing to the larger estimates. When we omit crime from our analysis, we still find substantial estimate returns for males. While the returns of the program are higher for males compared with those who attended an alternative preschool, the returns are higher for females compared with those who stayed at home.
 
-The rest of the paper justifies and interprets these estimates. We proceed in the following way. Section~\ref{section:background} discusses the ABC/CARE program. Section~\ref{section:methodsquestions} presents our notation and the definitions of the treatment effects reported in \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED} that underly the estimates in this paper. Their analysis of treatment effects establishes that the program had substantial impacts on multiple domains and motivates our analysis, based on economically meaningful metrics. Section~\ref{section:cbamethodology} presents our approaches for predicting life-cycle outcomes and the evidence supporting the assumptions that justify these approaches. Section~\ref{section:cbaresults} reports our estimates of benefit/cost ratios and rates of return. It reports outcomes from a variety of robustness checks and examines the validity of \emph{ad hoc} prediction methods currently used in the literature. Section~\ref{section:conclusion} summarizes the paper.
+The rest of the paper justifies and interprets these estimates. We proceed in the following way. Section~\ref{section:background} discusses the ABC/CARE program. Section~\ref{section:methodsquestions} presents our notation and the definitions of the treatment effects reported in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} that underly the estimates in this paper. Their analysis of treatment effects establishes that the program had substantial impacts on multiple domains and motivates our analysis, based on economically meaningful metrics. Section~\ref{section:cbamethodology} presents our approaches for predicting life-cycle outcomes and the evidence supporting the assumptions that justify these approaches. Section~\ref{section:cbaresults} reports our estimates of benefit/cost ratios and rates of return. It reports outcomes from a variety of robustness checks and examines the validity of \emph{ad hoc} prediction methods currently used in the literature. Section~\ref{section:conclusion} summarizes the paper.
 
 
 \section[Background and Data Sources]{Background and Data Sources} \label{section:background}
 
 \noindent \textbf{[JJH: A lot of this can be condensed] [JLG: This section has been condensed now, to a little less than two pages.]} 
 
-ABC/CARE targeted disadvantaged, predominately African-American children in Chapel Hill/Durham, North Carolina.\footnote{Both ABC and CARE were designed and implemented by researchers at the Frank Porter Graham Center of the University of North Carolina in Chapel Hill.} \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED} and  Appendix~\ref{appendix:background} describes these programs in detail. Here, we summarize their main features.
+ABC/CARE targeted disadvantaged, predominately African-American children in Chapel Hill/Durham, North Carolina.\footnote{Both ABC and CARE were designed and implemented by researchers at the Frank Porter Graham Center of the University of North Carolina in Chapel Hill.} \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} and  Appendix~\ref{appendix:background} describes these programs in detail. Here, we summarize their main features.
 
 The goal of these programs was to enhance the life skills of disadvantaged children. Both programs supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task-orientation, ability to communicate, independence, and pro-social behavior.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Sparling_1974_Synth_Edu_Infant_SPEECH, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.} They provide health screenings to treatment group members, but heath care costs were paid by parents.
 
@@ -183,7 +181,7 @@ Individuals are eligible to participate in the program if baseline background va
 
 Generally, we write the outcome of interest as $Y_{k,j,a}^d$. That is, the counterfactual outcome, $j \in \mathcal{J}_a$, at age $a \in [1, \ldots, A]$, under treatment status $d \in \{0, 1\}$ (treatment or control) in the sample $k = \{e, n \}$. The set $\mathcal{J}$ indexes the outcomes of interest at age $a \in [1, \ldots, A]$. $k = \{e, n\}$ indicates whether the outcome is observed in the experimental or the non-experimental sample. The outcome of interest could be age-specific, e.g. labor income or a health outcome, or a function of a sequence of many outcomes. In any of these cases, our three parameters are analogously defined. Thus, we drop the $k,j$ indices and define the parameters for the counterfactual vectors $\bm{Y}^1_a$ and $\bm{Y}^0_a$. In Section~\ref{section:cbamethodology} we recover these indices and make explicit assumptions to link the ``e'' and ``n'' datasets, and make outcome-$j$ specific predictions.
 
-All treatment group children have the same exposure. We simplify the analysis of the controls by creating two categories. ``$H$'' indicates that the control child is in home care throughout the entire length of the program. ``$C$'' indicates that the control child is in alternative childcare for any amount of time.\footnote{This assumption is consistent with the following finding in \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}: once parents decide to enroll their children in alternative childcare arrangements, the children stay enrolled up to age 5. They also find little sensitivity of the estimates to the choice of different, related categorizations.}  
+All treatment group children have the same exposure. We simplify the analysis of the controls by creating two categories. ``$H$'' indicates that the control child is in home care throughout the entire length of the program. ``$C$'' indicates that the control child is in alternative childcare for any amount of time.\footnote{This assumption is consistent with the following finding in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}: once parents decide to enroll their children in alternative childcare arrangements, the children stay enrolled up to age 5. They also find little sensitivity of the estimates to the choice of different, related categorizations.}  
 
 We thus compress a complex reality into two counterfactual outcome states at age $a$ for control group members:
 \begin{align*}
@@ -211,7 +209,7 @@ It is also useful to assess the average effectiveness of a program relative to a
 \bm{\Delta}_a \left( V =1 \right) : =   \mathbb{E} \left[ \bm{Y}^1_a - \bm{Y}^0_a | V = 1, W = 1 \right] := \mathbb{E} \left[\bm{Y}^1_a - \bm{Y}^0_{a,C} | V = 1, \bm{B} \in \mathcal{B}_0 \right].
 \end{equation}
 
-Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' below.\footnote{\cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED} displays results with alternative definitions of $V$ (i.e., different thresholds define if a child attended alternative preschool). The results are robust to the various definitions. What matters is whether any out-of-home child care is being used ($V>0$), and not the specific value of $V$.}
+Random assignment to treatment does not directly identify \eqref{eq:influenza} or \eqref{eq:smallpox}. Econometric methods are required to identify these parameters. We characterize the determinants of choices and our strategy for controlling for selection into ``$H$'' and ``$C$'' below.\footnote{\cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED} displays results with alternative definitions of $V$ (i.e., different thresholds define if a child attended alternative preschool). The results are robust to the various definitions. What matters is whether any out-of-home child care is being used ($V>0$), and not the specific value of $V$.}
 
 \section{Predicting and Monetizing Life-cycle Costs and Benefits}\label{section:cbamethodology}
 
@@ -510,9 +508,9 @@ QALYs are crucial for our benefit-cost analysis because they monetize the health
 
 \subsection{Predicting Parental Labor Income} \label{section:pincome}
 
-ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of mothers of children reported living with a partner at baseline and this status barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates the treatment effects in maternal labor force participation and parental labor income reported in \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}.
+ABC/CARE offers childcare to the parents of treated children for more than nine hours a day for five years, 50 weeks a year. Only $27\%$ of mothers of children reported living with a partner at baseline and this status barely changed during the course of the experiment (see Appendix~\ref{appendix:background}). The childcare component generates the treatment effects in maternal labor force participation and parental labor income reported in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}.
 
-We observe parental labor income at eight different times for the experimental subjects up through age 21.\footnote{The ages at which parental labor income is observed are 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE were, on average, 41 years old.}$^,$\footnote{We linearly interpolate parental labor income for ages for which we do not have observations between 0 and 21.} As documented in \cite{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}, treatment effects on parental labor income are sustained through the child's age 21. This presumably arises from wage growth due to parental attainment of further education and/or more work experience. An ideal approach would be to estimate the profile over the full life-cycle of mothers. We propose two different approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; and (ii) an approach based on the analysis of Section~\ref{section:just}. In Section~\ref{section:cbaresults}, we present estimates using the labor income through age 21 and using these two alternatives for projecting future labor income after age 21. The benefits of the program increase when considering the full life-cycles of mothers using either approach.
+We observe parental labor income at eight different times for the experimental subjects up through age 21.\footnote{The ages at which parental labor income is observed are 0, 1.5, 3.5, 4.5, 8, 12, 15, and 21. At age 21 the mothers in ABC/CARE were, on average, 41 years old.}$^,$\footnote{We linearly interpolate parental labor income for ages for which we do not have observations between 0 and 21.} As documented in \cite{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, treatment effects on parental labor income are sustained through the child's age 21. This presumably arises from wage growth due to parental attainment of further education and/or more work experience. An ideal approach would be to estimate the profile over the full life-cycle of mothers. We propose two different approaches for doing this in Appendix~\ref{app:parentalincome}: (i) an approach based on parameterizing parental labor income using standard Mincer equations; and (ii) an approach based on the analysis of Section~\ref{section:just}. In Section~\ref{section:cbaresults}, we present estimates using the labor income through age 21 and using these two alternatives for projecting future labor income after age 21. The benefits of the program increase when considering the full life-cycles of mothers using either approach.
 
 Any childcare inducements of the program likely benefit parents who, at baseline, did not have any other children. If they did, then they might have had to take care of other children anyway, weakening the childcare-driven effect, especially if there are younger siblings present. In Appendix~\ref{app:parentalincome}, we show that the treatment effect for discounted parental labor income is much higher when theAppendixre are no siblings of the participant children at baseline. The effect also weakens when comparing children who have siblings younger than 5 years old to children who have siblings 5 years old or younger.\footnote{These patterns persist when splitting the ABC/CARE sample by gender, but the estimates are not precise because the samples become too small. See Appendix~\ref{app:parentalincome}.}
 
@@ -657,7 +655,7 @@ Our methodology provides a more accurate estimate of the net-present value (and 
 
 \section{Summary} \label{section:conclusion} \textbf{[JJH: More complete summary] [JLG: I modified this section.]}
 
-This paper goes beyond analyzing short-term batteries of treatment effects on test scores to evaluate early education programs, a usual practice in the current literature. Based on a vast array of treatment effects from ages 0 to mid-30s reported in \citet{Garcia_Ziff_2017_Gender-Diff_UNPUBLISHED}, we pool experimental and non-experimental datasets to predict long-term outcomes. We use these predictions to compute statistics summarizing the social efficiency of the programs. 
+This paper goes beyond analyzing short-term batteries of treatment effects on test scores to evaluate early education programs, a usual practice in the current literature. Based on a vast array of treatment effects from ages 0 to mid-30s reported in \citet{Garcia_Heckman_Ziff_2017_Gender-Diff_UNPUBLISHED}, we pool experimental and non-experimental datasets to predict long-term outcomes. We use these predictions to compute statistics summarizing the social efficiency of the programs. 
 
 Our calculations account for many sources of statistical and modeling uncertainty, to which we provide a battery of sensitivity analysis. We go well beyond current and somewhat simplistic analyses that go from quantifying a single, short-term treatment effect to performing an \textit{ad hoc} prediction of labor income, without providing a sense of statistical and modeling uncertainty. We attempt to quantify the effects in the long-term and provide a life-cycle analysis. This includes the quantification and monetization of health outcomes, which is novel to the evaluation of policies in the Economics literature.
 
