--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -1,6 +1,6 @@
 Differences in gender are central features of economic and social life. This paper investigates how participation in enriched early childhood programs differentially affects the lives of disadvantaged boys and girls, and whether it promotes or reduces gender gaps. We show that, on many outcomes, low-quality childcare programs harm boys and contribute to gender gaps. This analysis sounds a cautionary note for advocates of early childcare in any form. Quality matters and low-quality programs can cause harm.
 
-There is a rich literature in psychology on the greater vulnerability of boys to adverse life conditions and the importance of fathers in the lives of boys.\footnote{See \citet{golding2016psychology}.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.\footnote{See \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists have contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Autor-etal_2015_Family-Disadvantage} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects}.} Less is known about effective strategies for reducing the vulnerability of boys to disadvantage.
+There is a rich literature in psychology on the greater vulnerability of boys to adverse life conditions and the importance of fathers in the lives of boys.\footnote{See \citet{golding2016psychology}.} As a group, girls mature earlier, are more resilient to adversity, and perform better in a variety of life tasks.\footnote{See \citet{Schore_2017_IMHJ} for an informative overview of this literature. Economists have contributed to this literature. See, e.g., \citet{Bertrand_Pan_2013_AEJAE}, \citet{Kottelenberg-Lehrer_2014_Gender-Effects}, and \citet{Autor-etal_2015_Family-Disadvantage}.} Less is known about effective strategies for reducing the vulnerability of boys to disadvantage.
 
 Many studies have shown the benefits of early-life interventions for improving the skills of children, especially those from disadvantaged families.\footnote{\citet{Currie_2011_AER,Elango_Hojman_etal_2016_Early-Edu}.} Although several of these studies report effects by gender, most do not.\footnote{We survey the literature in Appendix~\ref{appendix:gdiff-survey}. See \citet{Elango_Hojman_etal_2016_Early-Edu} for a discussion of the main findings from the literature on early childhood education. Not reporting gender differences is common. Some examples include \citet{Bernal_Keane_2011_JoLE,Cascio_Schanzenbach_2013_ImpactsExpandingAccess,Bitler_et_al_2014_Head_Start_Unpublished,Kline_Walters_2016_QJE}. There are some exceptions: \citet{Heckman_Moon_etal_2010_QE,Campbell_Conti_etal_2014_EarlyChildhoodInvestments,Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}.} Pooling males and females ignores potentially large differences in treatment effects.
 
@@ -16,7 +16,7 @@ Unlike previous studies, we estimate treatment effects comparing treatment group
 
 To preview our analysis, we present gender differences in outcomes in Table~\ref{tab:proportion-table-ranksign}. We report the proportion of outcomes, by category, for which males outperform females (we have multiple outcome measures in each category which we explain in greater detail below). These proportions are invariant to the scales used for individual measures. Under the null hypothesis of no difference in treatment effects by gender, the proportion of outcomes favoring any gender should be 50\%. We test this hypothesis for the control group and the treatment group separately to determine whether there is a baseline (control) gender difference and whether treatment affects this gender difference.
 
-Control males have higher IQs, employment, enhanced parental labor income (through subsidized childcare), and participation in criminal activity than females. They do better on an aggregate over all categories. Treatment reverses the gap between males and females for achievement. All achievement measures favor males in the control group, but favor females in the treatment group. Education is another outcome category for which treatment reverses the gender gap. Males have higher educational attainment in the control group with 66.7\% of the educational outcomes favoring males, although the result is not statistically significant. In the treatment group, however, only 11.1\% of the educational outcomes favor males. Treatment reverses the gap for an aggregate across all outcome categories and narrows the gap for employment.
+Pooling the two control groups, males have higher IQs, employment, enhanced parental labor income (through subsidized childcare), and are more likely to participate in criminal activity than females. They do better on an aggregate over all categories. Treatment reverses the gap between males and females in the pooled control group for achievement. All achievement measures favor males in the pooled control group, but favor females in the treatment group. Education is another outcome category for which treatment reverses the gender gap between treatment and a pooled control group. Males have higher educational attainment in the pooled control group with 66.7\% of the educational outcomes favoring males, although the result is not statistically significant. In the treatment group, however, only 11.1\% of the educational outcomes favor males. Treatment reverses the gap for an aggregate across all outcome categories and narrows the gap for employment.
 
 \begin{table}[H]
 \centering
@@ -43,7 +43,7 @@ Table~\ref{tab:proportion-table} summarizes the gender gaps reported in Table~\r
 \end{footnotesize}
 \begin{tablenotes}
 \footnotesize
-\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A checkmark indicates that the proportion of outcomes in the corresponding category is larger than 50\%, meaning that males outperform females. A checkmark with an asterisk indicates that the proportion is significantly larger than 50\% at the 10\% level. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative childcare. Column (4) is the difference between males and females in the treatment group.
+\item Note: This table summarizes comparison of gender gaps across outcome categories by different groups. A checkmark indicates that the proportion of outcomes in the corresponding category is larger than 50\%, meaning that males outperform females. A checkmark with an asterisk indicates that the proportion is significantly larger than 50\% at the 10\% level. A cross indicates that the proportion of outcomes is smaller than 50\%. A cross with an asterisk indicates that the proportion is significantly smaller than 50\% at the 10\% level. An equals sign indicates that the proportion is exactly 50\%. Column (1) is the difference between males and females in the full control group.  Column (2) is the difference between males and females in the control group only considering those who stayed at home. Column (3) is the difference between males and females in the control group only considering those who attended alternative childcare. Column (4) is the difference between males and females in the treatment group.
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
