--- a/sections/4_treatment-effects.tex
+++ b/sections/4_treatment-effects.tex
@@ -37,7 +37,7 @@ $^*$For females, we do not report graduation from a four-years college because w
 \end{sidewaystable}
 \doublespacing
 
-The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are sizeable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and \citet{Kottelenberg-Lehrer_2014_Gender-Effects} and the analysis of \citet{golding2016psychology}.}
+The results for males are different from those for females. Treatment has substantial effects when compared to the next best alternative. The effects are positive for a variety of health indicators, including drug use and hypertension. The effects on employment and labor income are sizable. The increase in employment at age 30 ranges from 11 to 19 percentage points. Labor income at age 30 increases between \$19,000 and \$24,000 (2014) after treatment. The effects strengthen when comparing treatment to low-quality childcare. Separation from the mother and being placed in relatively low-quality childcare centers has more deleterious consequences for males than for females.\footnote{This is consistent with the evidence in \citet{Kottelenberg-Lehrer_2014_Gender-Effects} and \citet{Baker_Gruber_Milligan_2015_Noncog_Defects} and the analysis of \citet{golding2016psychology}.}
 
 The results hold when using other definitions of control substitution, which vary by exposure length. They remain statistically significant or are borderline statistically insignificant when computing two-tailed $p$-values (see Appendix~\ref{app:vsensitivity-twosided}). When using step-down $p$-values (see Appendix~\ref{appendix:results} for the full set of step-down $p$-values), the health results remain statistically significant for males, when compared to the full control group and when compared to alternative center childcare. The education results remain statistically significant for females, when compared to the full control group and when compared to those who stay at home.
 
@@ -65,7 +65,7 @@ We consider a total of 126 outcomes reported in Appendix~\ref{appendix:gdiff-tes
 
 Given the large number of outcomes measured in the numerous follow-ups, reporting all treatment effects would overwhelm the reader. A companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, aggregates treatment effects by monetizing benefits and constructing lifetime profiles of outcomes to conduct cost/benefit and rate of return analyses. The benefits from ABC/CARE are largely driven by its effects on males. The mean benefit/cost ratio is 10.19 for males and 2.61 for females with a range of estimates all bounded above 1.
 
-In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. They indicate that females benefit more from the program than do males. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}).
+In this section, we report treatment effects by category and the proportion of statistically significant effects. We use combining functions, which count the number of positive (and significant) treatment effects by gender. We adjust for dependence across outcomes and for pretesting in constructing standard errors (see Appendix~\ref{appendix:methodology}). The combining functions indicate that females benefit more from the program than do males, in the sense that there are more outcomes across multiple domains for which female treatments benefit relative to female controls. However, as shown in \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, the monetary benefits of the program are greater for boys in part because it reduces costly criminal activity.
 
 We find strong evidence of gender differences in education and employment. For females in comparison to alternative childcare, 40\% of the education outcomes and 20\% of the employment outcomes are positive and significant. These increase to 80\% and 100\% when compared to staying at home. The treatment advantage for males is only seen when compared to those males who attended alternative childcare centers. None of the education or employment outcomes are statistically significant and positive when compared to staying at home.
 
