--- a/sections/6_conclusion.tex
+++ b/sections/6_conclusion.tex
@@ -2,5 +2,5 @@ This paper examines gender differences in the impacts of treatment of an influen
 
 Low-quality childcare arrangements are detrimental for boys. This finding helps explain an apparent contradiction in the literature (\citet{Baker_Gruber_etal_2008_JPE,Baker_Gruber_Milligan_2015_Noncog_Defects,Kottelenberg-Lehrer_2014_Gender-Effects}) that childcare can harm children. Low-quality childcare harms boys but girls are robust to their childcare arrangements. This evidence is consistent with previous research that finds boys to be more vulnerable early in life than girls \citep{golding2016psychology}. Similarly, boys are more likely to be harmed by unfavorable home environments (measured by father present and maternal locus of control) than are girls.
 
-Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. This study shows that low-quality early childhood programs can have harmful effects on child development, especially for boys.
+Our analysis sounds a cautionary note about the value of early childcare programs. In the past decade, many politicians and pundits have warmly embraced early childhood programs as solutions for reducing inequality and promoting social mobility. Little attention has been paid to the quality of those programs. High-quality early childhood programs have positive effects on both boys and girls. \cite{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished} show that they have a high economic rate of return. This study shows that low-quality early childhood programs can have harmful effects on child development, especially for boys, providing evidence on the benefits of high-quality programs.
 
